--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/41323b41f6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+    <link rel="icon" type="x-icon" href="favicon.png">
     <title>E-commerce | Karina</title>
 </head>
 <body>
@@ -58,42 +58,42 @@
         <div class="container-lista-best-seller"  id="skin">
             <ul class="lista-best-seller">
                 <li class="item-best-seller">
-                    <img src="assets/skin/lichia.png" alt="Loção hidratante Lichia">
+                    <img src="lichia.png" alt="Loção hidratante Lichia">
                     <p class="descricao-produtos">Loção hidratante Nativa Spa Lichia</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/skin/rose.jpg" alt="Loção revitalizante Rose">
+                    <img src="rose.jpg" alt="Loção revitalizante Rose">
                     <p class="descricao-produtos">Loção revitalizante Nativa Spa Rosé</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/skin/ameixa-negra.jpg" alt="Loção hidratante Ameixa Negra">
+                    <img src="ameixa-negra.jpg" alt="Loção hidratante Ameixa Negra">
                     <p class="descricao-produtos">Loção hidratante Nativa Spa Ameixa Negra</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/skin/cuide-se bem.jpg" alt="Creme de limpeza facial">
+                    <img src="cuide-se bem.jpg" alt="Creme de limpeza facial">
                     <p class="descricao-produtos">Creme de limpeza facial </p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/skin/beijinhoo.jpeg" alt="Loção hidratante beijinho">
+                    <img src="beijinhoo.jpeg" alt="Loção hidratante beijinho">
                     <p class="descricao-produtos">Loção hidratante Beijinho</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/skin/lily-essence.png" alt="Creme acetinado Lily Essence">
+                    <img src="lily-essence.png" alt="Creme acetinado Lily Essence">
                     <p class="descricao-produtos">Creme acetinado Lily Essence</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/skin/lavandinha.jpg" alt="Loção hidratante Lavandinha">
+                    <img src="lavandinha.jpg" alt="Loção hidratante Lavandinha">
                     <p class="descricao-produtos">Loção hidratante Lavandinha</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/skin/oleo-ameixa.jpg" alt="Óleo corporal Ameixa Negra">
+                    <img src="oleo-ameixa.jpg" alt="Óleo corporal Ameixa Negra">
                     <p class="descricao-produtos">Óleo corporal Ameixa Negra</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
@@ -102,42 +102,42 @@
         <div class="container-lista-best-seller hide-container" id="make">
             <ul class="lista-best-seller">
                 <li class="item-best-seller">
-                    <img src="assets/make/batom liquido cushion.jpg" alt="Batom líquido">
+                    <img src="batom liquido cushion.jpg" alt="Batom líquido">
                     <p class="descricao-produtos">Batom Cushion Sun Hit</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/make/delineador lquido.jpg" alt="Delineador Líquido">
+                    <img src="delineador lquido.jpg" alt="Delineador Líquido">
                     <p class="descricao-produtos">Delineador Líquido</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/make/po compacto  iluminador.jpg" alt="Pó iluminador">
+                    <img src="po compacto  iluminador.jpg" alt="Pó iluminador">
                     <p class="descricao-produtos">Pó compacto iluminador</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/make/sombra sper glitter furta cor.jpg" alt="Sombra glitter">
+                    <img src="sombra sper glitter furta cor.jpg" alt="Sombra glitter">
                     <p class="descricao-produtos">Sombra glitter By Manu</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/make/base liquida mate effet.jpg" alt="Base Efeito Mate">
+                    <img src="base liquida mate effet.jpg" alt="Base Efeito Mate">
                     <p class="descricao-produtos">Base Líquida M</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/make/mascara explosion effect.jpg" alt="Máscara de cílios">
+                    <img src="mascara explosion effect.jpg" alt="Máscara de cílios">
                     <p class="descricao-produtos">Máscara de cílios Explosion Effect</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/make/batom rosa cashmere.jpg" alt="Batom cremoso">
+                    <img src="batom rosa cashmere.jpg" alt="Batom cremoso">
                     <p class="descricao-produtos">Batom cremoso Rosa Cashmere</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
                 <li class="item-best-seller">
-                    <img src="assets/make/corretivo effec.jpg" alt="Corretivo líquido effect">
+                    <img src="corretivo effec.jpg" alt="Corretivo líquido effect">
                     <p class="descricao-produtos">Corretivo Líquido Effect</p>
                     <p class="preco-produtos">R$ 25,00</p>
                 </li>
